--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Title</title>
     <link rel="stylesheet" href="./css/main.css">
-<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/index.css">
+    <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body class="">
 
@@ -16,28 +18,28 @@
     <!--    HEADER-->
     <div class="header ">
         <div class="container">
-                        <nav class="navbar justify-content-between">
-                            <a class="navbar-brand">Dashboard Template</a>
-                            <form class="form-inline">
-                                    <a id="themeChanger" class="text-decoration-none" href="#">
-                                        <i class="bi bi-brightness-high fs-5 mx-3 p-2 rounded-3 "></i>
-                                    </a>
+            <nav class="navbar justify-content-between">
+                <a id="homePage" class="navbar-brand">Dashboard Template</a>
+                <form class="form-inline">
+                    <a id="themeChanger" class="text-decoration-none" href="#">
+                        <i class="bi bi-brightness-high fs-5 mx-3 p-2 rounded-3 "></i>
+                    </a>
 
-                                    <a class="text-decoration-none" href="#">
-                                        <i class="bi bi-fullscreen fs-5 mx-3 p-2 rounded-3"></i>
-                                    </a>
+                    <a id="fullScreen" class="text-decoration-none" href="#">
+                        <i class="bi bi-fullscreen fs-5 mx-3 p-2 rounded-3"></i>
+                    </a>
 
-                                    <a class="text-decoration-none" href="#">
-                                        <i class="bi bi-bell  fs-5 mx-3 p-2 rounded-3"></i>
-                                    </a>
+                    <a class="text-decoration-none" href="#">
+                        <i class="bi bi-bell  fs-5 mx-3 p-2 rounded-3"></i>
+                    </a>
 
-                                    <a class="text-decoration-none" href="#">
-                                        <i class="bi bi-chat-right fs-5 mx-3 p-2 rounded-3"></i>
-                                    </a>
-                                    <img id="profilePicture" class="rounded-3 pb-1 mx-3" style="width: 25px" src="./media/avatar2.png"
-                                         alt="">
-                            </form>
-                        </nav>
+                    <a class="text-decoration-none" href="#">
+                        <i class="bi bi-chat-right fs-5 mx-3 p-2 rounded-3"></i>
+                    </a>
+                    <img id="profilePicture" class="rounded-3 pb-1 mx-3" style="width: 25px" src="./media/avatar2.png"
+                         alt="">
+                </form>
+            </nav>
 
         </div>
     </div>
@@ -47,64 +49,67 @@
     <!--SIDEBAR-->
     <div class="sidebar">
 
-        <div class="d-flex flex-column p-lg-5" style="width: 280px">
-            <a href="/"
-               class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-decoration-none fs-5">
-                <i class="bi bi-list mx-3 fs-5 p-2"></i> Menu
-            </a>
-            <hr>
+        <div class="d-flex flex-column flex-shrink-0 p-3">
+            <a href="#"
+               class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-decoration-none fs-5"></a>
 
             <ul class="nav nav-pills flex-column mb-auto">
+
+                <li class="nav-item">
+                    <a href="#" class="nav-link" aria-current="page">
+                        <i class="bi bi-list mx-3 fs-5 p-2"></i> Menu
+                    </a>
+                </li>
+                <hr style="color: #ffffff">
+
+
                 <li class="nav-item">
                     <a style="background-color: #6464a8" href="#" class="nav-link active" aria-current="page">
-                        <i class="bi bi-house-door fs-6 p-2"></i>
-                        Home</a>
+                        <i class="bi bi-house-door mx-3 fs-5 p-2"></i> Home
+                    </a>
                 </li>
 
                 <li class="nav-item">
                     <a href="profile.html" class="nav-link" aria-current="page">
-                        <i class="bi bi-columns-gap fs-6 p-2"></i>
-                        Profile</a>
+                        <i class="bi bi-columns-gap mx-3 fs-5 p-2"></i> Profile
+                    </a>
                 </li>
+
 
                 <li class="nav-item">
                     <a href="#" class="nav-link" aria-current="page">
-                        <i class="bi bi-folder fs-6 p-2"></i>
+                        <i class="bi bi-folder mx-3 p-2 fs-5 p-2"></i>
                         Folder</a>
                 </li>
 
+
                 <li class="nav-item">
                     <a href="#" class="nav-link fs-6" aria-current="page">
-                        <i class="bi bi-folder fs-6 p-2"></i>
+                        <i class="bi bi-bar-chart mx-3 p-2 fs-5 p-2"></i>
                         Graphics</a>
                 </li>
 
                 <li class="nav-item">
                     <a href="#" class="nav-link fs-6" aria-current="page">
-                        <i class="bi bi-card-text fs-6 p-2"></i>
+                        <i class="bi bi-credit-card-2-back mx-3 p-2 fs-5 p-2"></i>
                         Cards</a>
                 </li>
 
                 <li class="nav-item">
                     <a href="#" class="nav-link" aria-current="page">
-                        <i class="bi bi-card-text fs-6 p-2"></i>
-                        Graphics</a>
-                </li>
-
-                <li class="nav-item">
-                    <a href="#" class="nav-link" aria-current="page">
-                        <i class="bi bi-archive fs-6 p-2"></i>
-                        Cards</a>
+                        <i class="bi bi-card-text mx-3 p-2 fs-5 p-2"></i>
+                        Forms</a>
                 </li>
             </ul>
         </div>
     </div>
+
     <!--SIDEBAR END-->
 
     <!--    HOME-->
     <div class="home-dash">
 
-        <div class="home item1 ">
+        <div class="home dynamicTextColorWhite item1 ">
             <div class="row">
                 <div class="col-6 text-start">
                     <h5>Total Orders</h5>
@@ -127,7 +132,7 @@
             </div>
         </div>
 
-        <div class="home item2 ">
+        <div class="home dynamicTextColorWhite item2 ">
             <div class="row">
 
                 <div class="col-6 text-start">
@@ -150,7 +155,7 @@
             </div>
         </div>
 
-        <div class="home item3 ">
+        <div class="home dynamicTextColorWhite item3 ">
             <div class="row">
                 <div class="col-6 text-start">
 
@@ -173,7 +178,7 @@
             </div>
         </div>
 
-        <div class="home item4 ">
+        <div class="home dynamicTextColorWhite item4 ">
             <div class="row">
                 <div class="col-6 text-start">
 
@@ -196,7 +201,7 @@
             </div>
         </div>
 
-        <div class="home item5 ">
+        <div class="home dynamicTextColorWhite item5 ">
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dolore fugiat rerum voluptate
                 voluptatibus! Aperiam aspernatur dolorum eius,
@@ -212,7 +217,7 @@
             </p>
         </div>
 
-        <div class="home item6 ">
+        <div class="home dynamicTextColorWhite item6 ">
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dolore fugiat rerum voluptate
                 voluptatibus! Aperiam aspernatur dolorum eius,
@@ -227,7 +232,7 @@
             </p>
         </div>
 
-        <div class="home item7 ">
+        <div class="home dynamicTextColorWhite item7 ">
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus atque beatae consequuntur culpa
                 debitis dolor eveniet itaque iusto modi molestiae nesciunt nostrum porro quae quasi, qui quia quibusdam
@@ -248,8 +253,8 @@
             </p>
         </div>
 
-        <div class="home  item8 ">
-            <table class="table table_text">
+        <div class="home dynamicTextColorWhite  item8 ">
+            <table class="table dynamicTextColorWhite">
                 <thead>
                 <tr>
                     <th scope="col">.</th>
@@ -395,7 +400,7 @@
             </table>
         </div>
 
-        <div class="home item9 ">
+        <div class="home dynamicTextColorWhite item9 ">
 
             <div class="card-body text-start">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur dolorum fuga incidunt
@@ -409,7 +414,7 @@
 
         </div>
 
-        <div class="home item10 ">
+        <div class="home dynamicTextColorWhite item10 ">
             <div class="card-body text-start">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur dolorum fuga incidunt
                     ipsam
@@ -421,7 +426,7 @@
             </div>
         </div>
 
-        <div class="home item11 ">
+        <div class="home dynamicTextColorWhite item11 ">
             <div class="card-body text-start">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem deserunt, est facere harum ipsa nam
@@ -433,7 +438,7 @@
             </div>
         </div>
 
-        <div class="home item12">
+        <div class="home dynamicTextColorWhite item12">
 
             <div class="row">
                 <div class="col-1">
@@ -514,7 +519,7 @@
 
         </div>
 
-        <div class="home item13 ">
+        <div class="home dynamicTextColorWhite item13 ">
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dolore fugiat rerum voluptate
                 voluptamtibus! Aperiam aspedrnatur dolorum eius,
@@ -555,8 +560,11 @@
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>-->
 <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>-->
 <!--<script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
 <script src="./js/app.js"></script>
+<script src="./js/index.js"></script>
 </body>
 </html>
