--- a/profile.html
+++ b/profile.html
@@ -46,94 +46,6 @@
             </nav>
         </div>
     </div>
-
-    <!--                    DENEME-->
-
-    <!--                    <div class="dropdown d-none d-md-flex notifications">-->
-
-    <!--                        <a class="nav-link icon show" data-bs-toggle="dropdown" aria-expanded="true" href="#">-->
-    <!--                            <i class="bi bi-bell  fs-5 mx-3 p-2 rounded-3 text-white"></i>-->
-    <!--                        </a>-->
-    <!--                        <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow show"-->
-    <!--                             style="position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate(-211px, 47px);"-->
-    <!--                             data-popper-placement="bottom-end">-->
-
-    <!--                            <div class="drop-heading border-bottom">-->
-    <!--                                <div class="d-flex">dfgdfgdfg</div>-->
-    <!--                                <div class="d-flex">dfgdfgdfg</div>-->
-    <!--                                <div class="d-flex">dfgdfgdfg</div>-->
-    <!--                            </div>-->
-    <!--                        </div>-->
-    <!--                    </div>-->
-
-    <!--                    <div class="d-none d-md-flex notifications">-->
-
-    <!--                        <a class="nav-link icon show" data-bs-toggle="dropdown" aria-expanded="true" href="#">-->
-    <!--                            <i class="bi bi-fullscreen fs-5 mx-3 p-2 rounded-3"></i>-->
-    <!--                        </a>-->
-    <!--                        <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow show"-->
-    <!--                             style="position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate(-211px, 47px);"-->
-    <!--                             data-popper-placement="bottom-end">-->
-    <!--                        </div>-->
-    <!--                    </div>-->
-
-    <!--                    <div class="d-none d-md-flex notifications">-->
-
-    <!--                        <a class="nav-link icon show" data-bs-toggle="dropdown" aria-expanded="true" href="#">-->
-    <!--                            <i class="bi bi-brightness-high fs-5 mx-3 p-2 rounded-3 "></i>-->
-    <!--                        </a>-->
-    <!--                        <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow show"-->
-    <!--                             style="position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate(-211px, 47px);"-->
-    <!--                             data-popper-placement="bottom-end">-->
-    <!--                        </div>-->
-    <!--                    </div>-->
-
-    <!--                    <div class="dropdown d-none d-md-flex chat">-->
-
-    <!--                        <a class="nav-link icon show" data-bs-toggle="dropdown" aria-expanded="true" href="#">-->
-    <!--                            <i class="bi bi-chat-right fs-5 mx-3 p-2 rounded-3"></i>-->
-
-    <!--                        </a>-->
-    <!--                        <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow show"-->
-    <!--                             style="position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate(-211px, 47px);"-->
-    <!--                             data-popper-placement="bottom-end">-->
-
-    <!--                            <div class="drop-heading border-bottom">-->
-    <!--                                <div class="d-flex">dfgdfgdfg</div>-->
-    <!--                                <div class="d-flex">dfgdfgdfg</div>-->
-    <!--                                <div class="d-flex">dfgdfgdfg</div>-->
-    <!--                            </div>-->
-    <!--                        </div>-->
-    <!--                    </div>-->
-
-    <!--                    <div class="d-none d-md-flex notifications">-->
-
-    <!--                        <a class="nav-link icon show" data-bs-toggle="dropdown" aria-expanded="true" href="#">-->
-    <!--                            <img id="profilePicture" class="rounded-3 pb-1 mx-3" style="width: 25px" src="./media/avatar2.png"-->
-    <!--                                 alt="">-->
-
-    <!--                        </a>-->
-    <!--                        <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow show"-->
-    <!--                             style="position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate(-211px, 47px);"-->
-    <!--                             data-popper-placement="bottom-end">-->
-    <!--                        </div>-->
-    <!--                    </div>-->
-
-
-    <!--                                        <a class="dropdown">-->
-    <!--                                            <button class="btn dropdown-toggle" type="button" id="notificationButton"-->
-    <!--                                                    data-bs-toggle="dropdown" aria-expanded="false">-->
-    <!--                                                <i class="bi bi-bell  fs-5 mx-3 p-2 rounded-3 text-white"></i>-->
-    <!--                                            </button>-->
-
-    <!--                                            <ul class="dropdown-menu" aria-labelledby="notificationButton">-->
-    <!--                                                <li><a class="dropdown-item" href="#">Action</a></li>-->
-    <!--                                                <li><a class="dropdown-item" href="#">Another action</a></li>-->
-    <!--                                                <li><a class="dropdown-item" href="#">Something else here</a></li>-->
-    <!--                                            </ul>-->
-    <!--                                        </a>-->
-
-
     <!--    HEADER END-->
 
 
@@ -252,7 +164,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
                                         </button>
-                                        <button id="saveChanges" type="button" class="btn btn-primary">Save changes
+                                        <button style="background-color: #6464a8; color: white; " id="saveChanges" type="button" class="btn">Save changes
                                         </button>
                                     </div>
                                 </div>
