Button style changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Title</title>
+    <title>Dashboard</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/index.css">
     <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
@@ -19,7 +19,7 @@
     <div class="header ">
         <div class="container">
             <nav class="navbar justify-content-between">
-                <a id="homePage" class="navbar-brand">Dashboard Template</a>
+                <a  href="index.html" id="homePage" class="navbar-brand">Dashboard Template</a>
                 <form class="form-inline">
                     <a id="themeChanger" class="text-decoration-none" href="#">
                         <i class="bi bi-brightness-high fs-5 mx-3 p-2 rounded-3 "></i>
@@ -36,7 +36,7 @@
                     <a class="text-decoration-none" href="#">
                         <i class="bi bi-chat-right fs-5 mx-3 p-2 rounded-3"></i>
                     </a>
-                    <img id="profilePicture" class="rounded-3 pb-1 mx-3" style="width: 25px" src="./media/avatar2.png"
+                    <img id="profilePicture" class="rounded-3 pb-1 mx-3" style="cursor: pointer; width: 25px" src="./media/avatar2.png"
                          alt="">
                 </form>
             </nav>
