--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,7 @@
     <div class="header ">
         <div class="container">
             <nav class="navbar justify-content-between">
-                <a class="navbar-brand">Dashboard Template</a>
+                <a href="index.html" class="navbar-brand">Dashboard Template</a>
                 <form class="form-inline">
 
                     <a id="themeChanger" class="text-decoration-none" href="#">
@@ -39,7 +39,7 @@
                         <i class="bi bi-chat-right fs-5 mx-3 p-2 rounded-3"></i>
                     </a>
 
-                    <img id="profilePicture" class="rounded-3 pb-1 mx-3" style="width: 25px" src="./media/avatar2.png"
+                    <img id="profilePicture" class="rounded-3 pb-1 mx-3" style="cursor: pointer; width: 25px" src="./media/avatar2.png"
                          alt="">
 
                 </form>
